<resources>
    <string name="app_name">KeyLook</string>
    <string name="home">Home</string>
    <string name="tvName">お名前を入力してください</string>
    <string name="tvEmail">メールアドレスを入力してください</string>
    <string name="tvPassword">パスワードを入力してください</string>
    <string name="Registration">登録</string>
    <string name="Session">ログイン</string>
    <string name="img_description">Image</string>
    <string name="question">計測する部屋を選択してください</string>
    <string name="start">計測開始</string>
    <string name="measurement">部屋を観察中です</string>
    <string name="found_items">以下のものが検出されました</string>
    <string-array name="item_list">
        <item>雑誌</item>
        <item>マグカップ</item>
        <item>フライパン</item>
    </string-array>
    <string-array name="item_list2">
        <item>プラレール</item>
        <item>ボール</item>
        <item>大きいおもちゃ</item>
    </string-array>
</resources>