<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KidsRoomItemActivity">
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/img_description"
        android:scaleType="fitStart"
        android:src="@drawable/img_2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/measurement"
        app:layout_constraintBottom_toTopOf="@+id/found_items"
        app:layout_constraintTop_toTopOf="@+id/image"
        app:layout_constraintVertical_bias="0.876"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/found_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/found_items"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/list2_item"
        app:layout_constraintTop_toBottomOf="@+id/image" />


    <ListView
        android:id="@+id/list2_item"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:entries="@array/item_list2"
        android:layout_marginTop="400dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btHome"
        android:layout_width="85dp"
        android:layout_height="46dp"
        android:onClick="onButtonClickHome"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>