<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomItemsActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/img_description"
        android:scaleType="fitStart"
        android:src="@drawable/img_1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/measurement"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/found_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/found_items"
        app:layout_constraintTop_toBottomOf="@+id/image" />


    <ListView
        android:id="@+id/list_iteme"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:entries="@array/item_list"
        android:layout_marginTop="400dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>